outputs/workspace_output_1773820357_2252.txt
/workspace/mechanic-shop/billing.js:1282
function renderInvoiceItemsFromInvoice\(invoice\) \{
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

SyntaxError: Invalid or unexpected token
    at wrapSafe (node:internal/modules/cjs/loader:1464:18)
    at checkSyntax (node:internal/main/check_syntax:78:3)

Node.js v20.20.1
